# ace.cpp

./: .gitignore  CMakeLists.txt  README.md
source/: compute_spherical_bessel_zeros.py  partitions.cpp  partitions.hpp  spherical_bessel.cpp  spherical_bessel.hpp  spherical_bessel_zeros.hpp  spherical_harmonic.cpp  spherical_harmonic.hpp
source/acecore/: simpleprodbasis.cpp  simpleprodbasis.hpp  sparsesymmprod.cpp  sparsesymmprod.hpp  symmprod_dag.cpp  symmprod_dag.hpp  symmprod_dag_kernels.cpp  symmprod_dag_kernels.hpp
source/cxxwrap/: ace-cxxwrap.cpp  libace.jl
source/pybind/: ace-pybind.cpp
test/: Project.toml  profile_AA.jl  test_acecore_prodbasis1.jl  test_cxxwrap.jl  test_partitions.py  test_spherical_bessel.py  test_spherical_harmonic.py
